back to initial commit

--- a/src/list.css
+++ b/src/list.css
@@ -135,7 +135,7 @@ select{
 }
 
 nav{
-    background-color: blue;
+    background-color: white;
     width:120%;
     height: 50px;
     padding-top: 5px;
