--- a/src/list.css
+++ b/src/list.css
@@ -3,6 +3,27 @@ body{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
+.main-lists{
+    display: flex;
+    /* flex-wrap: wrap; */
+    background: #f4f5f8;
+}
+
+@media (max-width: 850px) and (max-height: 870px) {
+    .main-lists {
+      display: grid;
+      grid-template-columns: 0;
+      /* grid-gap: 20px; */
+      /* ... other styles for grid mode ... */
+    }
+    .app-dropdowns{
+        width: 42% !important   ;
+    }
+
+}
+
+
+
 .task-title{
     font-weight: bold;
 }
@@ -146,11 +167,7 @@ select{
     margin: 15px;
 }
 
-.main-lists{
-    display: flex;
-    /* flex-wrap: wrap; */
-    background: #f4f5f8;
-}
+
 
 .App{
     display: block;
@@ -187,7 +204,4 @@ select{
     margin-left: 15px;
 }
 
-.main-lists{
-    /* margin-left: 10px; */
-}
 
