--- a/src/list.css
+++ b/src/list.css
@@ -3,6 +3,11 @@ body{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
+p span{
+    margin-left: 10px;
+}
+
+
 .main-lists{
     display: flex;
     /* flex-wrap: wrap; */
